# Liquid-Nation

./: .env  .gitignore  Cargo.toml  README.md  eslint.config.js  index.html
apps/swap-app/: Cargo.toml
apps/swap-app/spells/: batch-fill.yaml  cancel-order.yaml  create-order.yaml  cross-chain-fill.yaml  expire-order.yaml  fill-order.yaml  partial-fill.yaml  update-order.yaml
apps/swap-app/src/: lib.rs  main.rs
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/routes/: health.rs  mod.rs  orders.rs  spells.rs  wallet.rs
backend/src/services/: bitcoin.rs  charms.rs  mod.rs
src/: App.jsx  index.css
src/components/: AnimatedBackground.jsx  CTA.jsx  CreateOrder.jsx  Dashboard.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  Offers.jsx  Settings.jsx  Stats.jsx  Swap.jsx  ThemeToggle.jsx  TransactionHistory.css  WalletConnect.jsx
src/config/: wagmi.js
src/context/: OrderContext.jsx  ThemeContext.jsx  WalletContext.jsx
src/data/: README.md  chainThemes.js  features.jsx  offers.js  stats.js  steps.js
src/services/: api.js
