[package]
name = "liquid-swap-app"
version = "0.1.0"
edition = "2021"
description = "Liquid Nation P2P swap app for Charms protocol"

[dependencies]
charms-sdk = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "liquid-swap-app"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true

